--- a/documentation/namespaces/instagramapi-response.html
+++ b/documentation/namespaces/instagramapi-response.html
@@ -559,6 +559,8 @@
                 <dd>PrivateStoriesMembersResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-StickerTrayResponse.html"><abbr title="\InstagramAPI\Response\StickerTrayResponse">StickerTrayResponse</abbr></a></dt>
                 <dd>StickerTrayResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-TotpCodeResponse.html"><abbr title="\InstagramAPI\Response\TotpCodeResponse">TotpCodeResponse</abbr></a></dt>
+                <dd>TotpCodeResponse.</dd>
             
                     </dl>
     
