--- a/documentation/packages/Default.html
+++ b/documentation/packages/Default.html
@@ -1534,6 +1534,8 @@ to-string and from-string methods in this class are consistent.</dd>
                 <dd>PrivateStoriesMembersResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-StickerTrayResponse.html"><abbr title="\InstagramAPI\Response\StickerTrayResponse">StickerTrayResponse</abbr></a></dt>
                 <dd>StickerTrayResponse.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-TotpCodeResponse.html"><abbr title="\InstagramAPI\Response\TotpCodeResponse">TotpCodeResponse</abbr></a></dt>
+                <dd>TotpCodeResponse.</dd>
             
                             <dt><a href="../classes/InstagramAPI-React-PersistentTrait.html"><abbr title="\InstagramAPI\React\PersistentTrait">PersistentTrait</abbr></a></dt>
                 <dd></dd>
