--- a/documentation/classes/InstagramAPI-Request-Discover.html
+++ b/documentation/classes/InstagramAPI-Request-Discover.html
@@ -227,7 +227,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Discover.php"><a href="../files/src-request-discover.html"><abbr title="src/Request/Discover.php">Discover.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">29</span>
+        <span class="phpdocumentor-element-found-in__line">30</span>
     </aside>
         <p class="phpdocumentor-summary">Get Explore tab feed.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -249,6 +249,10 @@
             [,                 <span class="phpdocumentor-signature__argument__name">$isPrefetch</span> :
                 <span class="phpdocumentor-signature__argument__return-type">bool</span>
                  = <span class="phpdocumentor-signature__argument__default-value">false</span> ]            </span>
+                    <span class="phpdocumentor-signature__argument">
+            [,                 <span class="phpdocumentor-signature__argument__name">$clusterDisabled</span> :
+                <span class="phpdocumentor-signature__argument__return-type">bool</span>
+                 = <span class="phpdocumentor-signature__argument__default-value">true</span> ]            </span>
                 )
         : <span class="phpdocumentor-signature__response_type"><a href="../classes/InstagramAPI-Response-ExploreResponse.html"><abbr title="\InstagramAPI\Response\ExploreResponse">ExploreResponse</abbr></a></span>
     </code>
@@ -280,6 +284,11 @@ Decor: 'hashtag_inspired:5', Dance: 'hashtag_inspired:22'.</p></section></dd>
                     : <span class="phpdocumentor-signature__argument__return-type">bool</span>
                      = <span class="phpdocumentor-signature__argument__default-value">false</span>                </dt>
                 <dd class="phpdocumentor-argument-list__definition"><section class="phpdocumentor-description"><p>Whether this is the first fetch; we'll ignore maxId if TRUE.</p></section></dd>
+                            <dt class="phpdocumentor-argument-list__entry">
+                    <span class="phpdocumentor-signature__argument__name">$clusterDisabled</span>
+                    : <span class="phpdocumentor-signature__argument__return-type">bool</span>
+                     = <span class="phpdocumentor-signature__argument__default-value">true</span>                </dt>
+                <dd class="phpdocumentor-argument-list__definition"><section class="phpdocumentor-description"><p>Whether this is the first fetch; we'll ignore maxId if TRUE.</p></section></dd>
                     </dl>
     
             <h5 class="phpdocumentor-tag-list__heading">Tags</h5>
@@ -309,7 +318,7 @@ Decor: 'hashtag_inspired:5', Dance: 'hashtag_inspired:22'.</p></section></dd>
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Discover.php"><a href="../files/src-request-discover.html"><abbr title="src/Request/Discover.php">Discover.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">67</span>
+        <span class="phpdocumentor-element-found-in__line">72</span>
     </aside>
         <p class="phpdocumentor-summary">Explore reels.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -367,7 +376,7 @@ Decor: 'hashtag_inspired:5', Dance: 'hashtag_inspired:22'.</p></section></dd>
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Discover.php"><a href="../files/src-request-discover.html"><abbr title="src/Request/Discover.php">Discover.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">109</span>
+        <span class="phpdocumentor-element-found-in__line">114</span>
     </aside>
         <p class="phpdocumentor-summary">Get discover chaining feed.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -489,7 +498,7 @@ level.</p></section></dd>
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Discover.php"><a href="../files/src-request-discover.html"><abbr title="src/Request/Discover.php">Discover.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">160</span>
+        <span class="phpdocumentor-element-found-in__line">165</span>
     </aside>
         <p class="phpdocumentor-summary">Report media in the Explore-feed.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -549,7 +558,7 @@ level.</p></section></dd>
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Discover.php"><a href="../files/src-request-discover.html"><abbr title="src/Request/Discover.php">Discover.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">193</span>
+        <span class="phpdocumentor-element-found-in__line">198</span>
     </aside>
         <p class="phpdocumentor-summary">Search for Instagram users, hashtags and places via Facebook&#039;s algorithm.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -660,7 +669,7 @@ from a previous call to get more results. The following entities are supported:
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Discover.php"><a href="../files/src-request-discover.html"><abbr title="src/Request/Discover.php">Discover.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">247</span>
+        <span class="phpdocumentor-element-found-in__line">252</span>
     </aside>
         <p class="phpdocumentor-summary">Register recent search click.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -720,7 +729,7 @@ from a previous call to get more results. The following entities are supported:
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Discover.php"><a href="../files/src-request-discover.html"><abbr title="src/Request/Discover.php">Discover.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">275</span>
+        <span class="phpdocumentor-element-found-in__line">282</span>
     </aside>
         <p class="phpdocumentor-summary">Get search suggestions via Facebook&#039;s algorithm.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -734,7 +743,8 @@ from a previous call to get more results. The following entities are supported:
         : <span class="phpdocumentor-signature__response_type"><a href="../classes/InstagramAPI-Response-SuggestedSearchesResponse.html"><abbr title="\InstagramAPI\Response\SuggestedSearchesResponse">SuggestedSearchesResponse</abbr></a></span>
     </code>
 
-        <section class="phpdocumentor-description"><p>NOTE: In the app, they're listed as the &quot;Suggested&quot; in the &quot;Top&quot; tab at the &quot;Search&quot; screen.</p></section>
+        <section class="phpdocumentor-description"><p>WARNING: THIS FUNCTION IS NOT USED ANYMORE!</p>
+<p>NOTE: In the app, they're listed as the &quot;Suggested&quot; in the &quot;Top&quot; tab at the &quot;Search&quot; screen.</p></section>
     
             <h5 class="phpdocumentor-argument-list__heading">Parameters</h5>
         <dl class="phpdocumentor-argument-list">
@@ -772,7 +782,7 @@ from a previous call to get more results. The following entities are supported:
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Discover.php"><a href="../files/src-request-discover.html"><abbr title="src/Request/Discover.php">Discover.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">296</span>
+        <span class="phpdocumentor-element-found-in__line">303</span>
     </aside>
         <p class="phpdocumentor-summary">Get recent searches via Facebook&#039;s algorithm.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -812,7 +822,7 @@ from a previous call to get more results. The following entities are supported:
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Discover.php"><a href="../files/src-request-discover.html"><abbr title="src/Request/Discover.php">Discover.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">309</span>
+        <span class="phpdocumentor-element-found-in__line">316</span>
     </aside>
         <p class="phpdocumentor-summary">Clear the search history.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -851,7 +861,7 @@ from a previous call to get more results. The following entities are supported:
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Discover.php"><a href="../files/src-request-discover.html"><abbr title="src/Request/Discover.php">Discover.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">325</span>
+        <span class="phpdocumentor-element-found-in__line">332</span>
     </aside>
         <p class="phpdocumentor-summary">Get nullstate dynamic sections.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -890,7 +900,7 @@ from a previous call to get more results. The following entities are supported:
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Discover.php"><a href="../files/src-request-discover.html"><abbr title="src/Request/Discover.php">Discover.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">340</span>
+        <span class="phpdocumentor-element-found-in__line">347</span>
     </aside>
         <p class="phpdocumentor-summary">TODO.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -929,7 +939,7 @@ from a previous call to get more results. The following entities are supported:
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Discover.php"><a href="../files/src-request-discover.html"><abbr title="src/Request/Discover.php">Discover.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">358</span>
+        <span class="phpdocumentor-element-found-in__line">365</span>
     </aside>
         <p class="phpdocumentor-summary">Get user suggestions based on different algorithms.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -980,7 +990,7 @@ from a previous call to get more results. The following entities are supported:
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Discover.php"><a href="../files/src-request-discover.html"><abbr title="src/Request/Discover.php">Discover.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">378</span>
+        <span class="phpdocumentor-element-found-in__line">385</span>
     </aside>
         <p class="phpdocumentor-summary">TODO.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -1019,7 +1029,7 @@ from a previous call to get more results. The following entities are supported:
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Discover.php"><a href="../files/src-request-discover.html"><abbr title="src/Request/Discover.php">Discover.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">396</span>
+        <span class="phpdocumentor-element-found-in__line">403</span>
     </aside>
         <p class="phpdocumentor-summary">TODO.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -1070,7 +1080,7 @@ from a previous call to get more results. The following entities are supported:
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Request/Discover.php"><a href="../files/src-request-discover.html"><abbr title="src/Request/Discover.php">Discover.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">419</span>
+        <span class="phpdocumentor-element-found-in__line">426</span>
     </aside>
         <p class="phpdocumentor-summary">Get recommended users based on another user.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
